<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="57dp">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/paid_member_text_5"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />


                <View
                    android:id="@+id/view2"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="160dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/boarder"
                    android:minWidth="40dp"
                    android:minHeight="2dp"
                    tools:layout_weight="40"
                    tools:layout_width="40dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/paid_member_text_6"
                    android:textAlignment="center"
                    android:textColor="@color/accent" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/paid_member_text_7"
                    android:textAlignment="center"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@string/paid_member_text_8"
                    android:textAlignment="center"
                    android:textColor="@color/bg"
                    android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:paddingEnd="0px">


                <TextView
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:background="@color/boarder"
                    android:gravity="center|center_horizontal"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="通常"
                    android:textSize="16sp"
                    app:strokeWidth="0dp" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="プレミアム"
                    android:textSize="16sp"
                    android:background="@color/message"
                    android:gravity="center|center_horizontal"
                    app:strokeWidth="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    />

            </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relativelayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/main_panel_1">

                        <!-- 12ヶ月 プラン -->
                        <include
                            android:id="@+id/include_purchase_paid_member_12_1_1"
                            layout="@layout/include_purchase_paid_member_12_1" />

                        <!-- 6ヶ月 プラン -->
                        <include
                            android:id="@+id/include_purchase_paid_member_6_1_1"
                            layout="@layout/include_purchase_paid_member_6_1" />

                        <!-- 3ヶ月 プラン -->
                        <include
                            android:id="@+id/include_purchase_paid_member_3_1_1"
                            layout="@layout/include_purchase_paid_member_3_1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/main_panel_2"
                        android:visibility="gone">

                        <!-- 3ヶ月 プラン -->
                        <include
                            android:id="@+id/include_purchase_premium_member_3"
                            layout="@layout/include_purchase_premium_member_3" />

                        <!-- 6ヶ月 プラン -->
                        <include
                            android:id="@+id/include_purchase_premium_member_6"
                            layout="@layout/include_purchase_premium_member_6" />

                        <!-- 12ヶ月 プラン -->
                        <include
                            android:id="@+id/include_purchase_premium_member_12"
                            layout="@layout/include_purchase_premium_member_12" />

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>