<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_3_1"
    android:layout_width="fill_parent"
    android:layout_height="140dp">

    <View
        android:id="@+id/view_3_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/boarder" />

    <View
        android:id="@+id/view_base_3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_rounded_corners_paid_mamber_base_10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/view_base_3_1"
        android:layout_alignTop="@id/view_base_3_1"
        android:layout_alignEnd="@id/view_base_3_1"
        android:layout_alignBottom="@id/view_base_3_1"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:id="@+id/linear_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="top|bottom"
            android:orientation="vertical"
            android:padding="0dp">

            <TextView
                android:id="@+id/BannerLText_3_1_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text=""
                android:textColor="@color/bg"
                android:textSize="6sp" />

            <TextView
                android:id="@+id/BannerLText_3_1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/paid_member_term_3"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/BannerLText_3_1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/paid_member_title_plan"
                android:textColor="@color/bg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100"
                android:orientation="horizontal">

                <!-- スペース 線 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:visibility="visible"
                    tools:visibility="visible">
                    <View
                        android:id="@+id/BannerSpace_3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/boarder"/>
                </LinearLayout>

                <!-- バナー右側 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="96"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="0px"
                        android:weightSum="100">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/BannerRText_3_1_0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dp"
                                android:fontFamily="sans-serif-black"
                                android:gravity="center"
                                android:text="@string/paid_member_term_3_price"
                                android:textColor="@color/white"
                                android:textSize="30sp" />

                            <TextView
                                android:id="@+id/BannerRText_3_1_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dp"
                                android:gravity="center"
                                android:text="/月"
                                android:textColor="@color/bg" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="8dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/BannerRText_3_1_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="1dp"
                                    android:gravity="start"
                                    android:text="（税込）"
                                    android:textColor="@color/bg"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/BannerRText_3_1_4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="1dp"
                                    android:gravity="center"
                                    android:text="@string/paid_member_term_3_price_total"
                                    android:textColor="@color/bg"
                                    android:textSize="8sp" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/button_3_1"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="22dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/shape_rounded_corners_10dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:strokeColor="@color/pinkish_grey"
                        android:text="登録する"
                        android:textColor="@color/primaryDark"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:background="@color/accent"
                        app:backgroundTint="@color/accent"
                        app:strokeWidth="0dp"
                        tools:ignore="TouchTargetSizeCheck" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/popText_3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rounded_corners_10dp"
        android:gravity="center"
        android:paddingStart="6dp"
        android:paddingTop="4dp"
        android:paddingEnd="6dp"
        android:paddingBottom="4dp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="お試し"
        android:textColor="@color/bg" />

    <View
        android:id="@+id/view_base_right_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/popText_3_1"
        android:background="?android:attr/panelBackground" />

</RelativeLayout>